# LLMeister

./: .gitignore  LICENSE  README.md  benchmark.py  config.py  config.yaml  db.py  launcher.py  lifecycle.py  llmeister.service  manager.py  planner.py  pyproject.toml  research.py
deploy/: llmeister.service
docs/: ARCHITECTURE.md  OPTIMIZER_AGENT.md
llmeister/: __init__.py  __main__.py  config.py  db.py  launcher.py  lifecycle.py  manager.py  metrics.py  optimizer.py  optimizer_db.py  planner.py  research.py  workload_benchmark.py
static/: index.html
